STYLE: fixed overlapping animations

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -486,15 +486,14 @@ body
     body > div > div > div:nth-child(2) div {
         display: block;
 
-        animation-name: mario-fadein-intro, mario-walkin-intro, spin, crouch,
-            jump, super-mario;
-        animation-duration: 5s, 6s, 1s, 0.1s, 0.4s, 0.5s;
+        animation-name: mario-fadein-intro, mario-walkin-intro;
+        animation-duration: 5s, 6s;
 
         animation-timing-function: ease-in, ease-in;
-        animation-delay: 0s, 5s, 0s, 0s, 0s, 0s;
-        animation-iteration-count: 1, 1, infinite, infinite, infinite, infinite;
+        animation-delay: 0s, 5s;
+        animation-iteration-count: 1;
         animation-fill-mode: forwards;
-        animation-play-state: running, running, paused, paused, paused, paused;
+        animation-play-state: running;
 
         background-image: url(../assets/images/super-mario-bros-3/super-mario-world-3-mario-front-facing.png);
         background-size: cover;
@@ -539,41 +538,72 @@ body
     --super-mario: true;
 }
 
+body
+    div
+    div:has(
+        div:first-child > div:nth-child(2) label:first-of-type > input:checked
+    ) {
+    --dies: true;
+}
+
+@container wrapper style(--on:true) and style(--dies:true) {
+    body > div > div > div:nth-of-type(2) div {
+        animation-name: mario-fadein-intro, mario-walkin-intro, spin, crouch,
+            super-mario, jump, dies;
+        animation-play-state: running, running, paused, paused, paused, paused,
+            running;
+        animation-iteration-count: 1, 1, infinite, infinite, infinite, infinite,
+            1;
+        animation-duration: 5s, 6s, 0.4s, 0.1s, 0.5s, 0.9s, 1.5s;
+    }
+}
+
 @container wrapper style(--on:true) and style(--jump:true) {
     body > div > div > div:nth-of-type(2) div {
         animation-name: mario-fadein-intro, mario-walkin-intro, spin, crouch,
-            super-mario, jump;
-        animation-play-state: running, running, paused, paused, paused, running;
-        animation-duration: 5s, 6s, 0.4s, 0.1s, 0.5s, 0.9s;
+            super-mario, dies, jump;
+        animation-play-state: running, running, paused, paused, paused, paused,
+            running;
+        animation-iteration-count: 1, 1, infinite, infinite, infinite, 1,
+            infinite;
+        animation-duration: 5s, 6s, 0.4s, 0.1s, 0.5s, 1.5s, 0.9s;
     }
 }
 
 @container wrapper style(--on:true) and style(--spin:true) {
     body > div > div > div:nth-of-type(2) div {
         animation-name: mario-fadein-intro, mario-walkin-intro, jump,
-            super-mario, crouch, spin;
+            super-mario, crouch, dies, spin;
 
-        animation-duration: 5s, 6s, 0.4s, 0.1s, 0.5s, 0.4s;
-
-        animation-play-state: running, running, paused, paused, paused, running;
+        animation-duration: 5s, 6s, 0.4s, 0.1s, 0.5s, 1.5s, 0.4s;
+        animation-iteration-count: 1, 1, infinite, infinite, infinite, 1,
+            infinite;
+        animation-play-state: running, running, paused, paused, paused, paused,
+            running;
     }
 }
 
 @container wrapper style(--on:true) and style(--crouch:true) {
     body > div > div > div:nth-of-type(2) div {
         animation-name: mario-fadein-intro, mario-walkin-intro, spin, jump,
-            super-mario, crouch;
-        animation-duration: 5s, 6s, 0.4s, 0.9s, 0.5s, 0.1s;
-        animation-play-state: running, running, paused, paused, paused, running;
+            super-mario, dies, crouch;
+        animation-duration: 5s, 6s, 0.4s, 0.9s, 0.5s, 1.5s, 0.1s;
+        animation-play-state: running, running, paused, paused, paused, paused,
+            running;
+        animation-iteration-count: 1, 1, infinite, infinite, infinite, 1,
+            infinite;
     }
 }
 
 @container wrapper style(--on:true) and style(--super-mario:true) {
     body > div > div > div:nth-of-type(2) div {
         animation-name: mario-fadein-intro, mario-walkin-intro, spin, jump,
-            crouch, super-mario;
-        animation-duration: 5s, 6s, 0.4s, 0.9s, 0.1s, 0.5s;
-        animation-play-state: running, running, paused, paused, paused, running;
+            crouch, dies, super-mario;
+        animation-duration: 5s, 6s, 0.4s, 0.9s, 0.1s, 1.5s, 0.5s;
+        animation-iteration-count: 1, 1, infinite, infinite, infinite, 1,
+            infinite;
+        animation-play-state: running, running, paused, paused, paused, paused,
+            running;
     }
 }
 
@@ -818,6 +848,7 @@ body
         height: 32px;
         translate: 0 0;
     }
+
     100% {
         background-image: url(../assets/images/super-mario-bros-3/super-mario-world-3-mario-front-facing.png);
         height: 32px;
@@ -866,9 +897,41 @@ body
         translate: 0 0;
     }
 
-    100% {
+    99.99% {
         filter: hue-rotate(360deg);
         translate: 0 0;
+    }
+    100% {
+        translate: 0 0;
+    }
+}
+
+@keyframes dies {
+    0% {
+        translate: 0 0;
+    }
+    .0000000000001% {
+        background-image: url(../assets/images/super-mario-bros-3/super-mario-world-3-mario-sprites-dies.png);
+    }
+
+    85% {
+        background-image: url(../assets/images/super-mario-bros-3/super-mario-world-3-mario-sprites-dies.png);
+        translate: 0 -3em;
+    }
+
+    99% {
+        translate: 0 3em;
+        background-image: url(../assets/images/super-mario-bros-3/super-mario-world-3-mario-sprites-dies.png);
+        opacity: 0;
+    }
+    99.9% {
+        opacity: 0;
+        translate: 0 3em;
+    }
+    100% {
+        background-image: url(../assets/images/super-mario-bros-3/super-mario-world-3-mario-sprites-dies.png);
+        translate: 0 0;
+        opacity: 1;
     }
 }
 
